--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
-qBitTorrent-Cleanup-Dev.sh
-dev*.sh
+# Environment files
+.env
+*.env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Logs
+logs/
+*.log
+
+# Docker
+docker-compose.override.yml
+
